--- a/public/index.html
+++ b/public/index.html
@@ -2,24 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://i.ibb.co/vQZwz3f/Image1.jpg">
+    <link rel="icon" href="https://i.ibb.co/vQZwz3f/Image1.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Roscoe Johnson Resume"
+    <meta name="description" content="Roscoe Johnson Resume" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kufam:ital,wght@1,900&family=Pacifico&display=swap"
+      rel="stylesheet"
     />
-    
-    
-    <link href="https://fonts.googleapis.com/css2?family=Kufam:ital,wght@1,900&family=Pacifico&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Ranchers&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Ranchers&family=Ubuntu:wght@300&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Roscoe Resume</title>
   </head>
   <body>
-   
     <div id="root"></div>
-
   </body>
 </html>
